Token validation, Teacher Controller

--- a/Asg2/Views/Access/Login.cshtml
+++ b/Asg2/Views/Access/Login.cshtml
@@ -33,6 +33,7 @@
 
         <button type="submit">Login</button>
         
+        <a asp-controller="Access" asp-action="Register" class="btn btn-default">Register</a>
 
         @if (ViewData["ValidateMessage"] != null)
         {
