--- a/Asg2/Views/Teacher/ShowStudents.cshtml
+++ b/Asg2/Views/Teacher/ShowStudents.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "ShowStudents";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/Teacher.cshtml";
 }
 
 <h1>ShowStudents</h1>
