--- a/Asg2/Views/Shared/Student.cshtml
+++ b/Asg2/Views/Shared/Student.cshtml
@@ -20,16 +20,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Teacher" asp-action="LogOut">Log Out</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="LogOut">Log Out</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Teacher" asp-action="ShowStudents">Show Students</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Teacher" asp-action="GenerateToken">Generate Token</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Teacher" asp-action="ShowLabs">Show Labs</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="ShowLabs4Student">Show Labs</a>
                         </li>
 
                     </ul>
@@ -54,4 +48,5 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
 
