update/create Labs, ShowAttendance, something else that i can't remember

--- a/Asg2/Views/Shared/Teacher.cshtml
+++ b/Asg2/Views/Shared/Teacher.cshtml
@@ -31,7 +31,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Teacher" asp-action="ShowLabs">Show Labs</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Teacher" asp-action="ShowSubmissions">Show Submissions</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Teacher" asp-action="ShowAttendance">Show Attendance</a>
+                        </li>
                     </ul>
                 </div>
             </div>
