--- a/Asg2/Views/Student/ShowLabs4Student.cshtml
+++ b/Asg2/Views/Student/ShowLabs4Student.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/Student.cshtml";
 }
 
-<h1>ShowLabs4Student</h1>
+<h1>Software Design Labs</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -81,8 +81,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Add Submission", "AddSubmission", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
