--- a/Asg2/Views/Teacher/ShowLabs.cshtml
+++ b/Asg2/Views/Teacher/ShowLabs.cshtml
@@ -8,7 +8,7 @@
 <h1>ShowLabs</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateLab">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -80,9 +80,9 @@
                 @Html.DisplayFor(modelItem => item.AsgDescription)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Edit", "EditL", new { Id=item.Id }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Delete", "DeleteL", new {  id=item.Id })
             </td>
         </tr>
 }
