--- a/Asg2/Views/Teacher/ShowStudents.cshtml
+++ b/Asg2/Views/Teacher/ShowStudents.cshtml
@@ -8,7 +8,7 @@
 <h1>ShowStudents</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateStudent">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -56,9 +56,9 @@
                 @Html.DisplayFor(modelItem => item.Hobby)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Edit", "EditS", new {  Id=item.Id, /*Name=item.Name, Email=item.Email, Password=item.Password, Group=item.Group, Hobby=item.Hobby*/  }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { email =item.Email  })
+                @Html.ActionLink("Delete", "DeleteS", new { email =item.Email  })
             </td>
         </tr>
 }
