Show Submissions, Attendance, Edit Submissions and Attendances, Grade

--- a/Asg2/Views/Teacher/ShowLabs.cshtml
+++ b/Asg2/Views/Teacher/ShowLabs.cshtml
@@ -81,7 +81,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "EditL", new { Id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @*@Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
                 @Html.ActionLink("Delete", "DeleteL", new {  id=item.Id })
             </td>
         </tr>
