--- a/Asg2/Views/Shared/Student.cshtml
+++ b/Asg2/Views/Shared/Student.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="ShowLabs4Student">Show Labs</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="ShowSubmissions">Show Submissions</a>
+                        </li>
 
                     </ul>
                 </div>
