--- a/Asg2/Views/Student/ShowLabs4Student.cshtml
+++ b/Asg2/Views/Student/ShowLabs4Student.cshtml
@@ -8,7 +8,7 @@
 <h1>Software Design Labs</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @*<a asp-action="Create">Create New</a>*@
 </p>
 <table class="table">
     <thead>
@@ -80,8 +80,8 @@
                 @Html.DisplayFor(modelItem => item.AsgDescription)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Add Submission", "AddSubmission", new { /* id=item.PrimaryKey */ })
+                @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |*@
+                @Html.ActionLink("Add Submission", "AddSubmission", new {  Id=item.Id })
             </td>
         </tr>
 }
