--- a/Asg2/Views/Teacher/ShowAttendance.cshtml
+++ b/Asg2/Views/Teacher/ShowAttendance.cshtml
@@ -8,7 +8,7 @@
 <h1>ShowAttendance</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="CreateAttendance">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -38,9 +38,9 @@
                 @Html.DisplayFor(modelItem => item.StudentId)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @*@Html.ActionLink("NEdit", "Edit", new { /* id=item.PrimaryKey */ }) |*@
+                @*@Html.ActionLink("NDetails", "Details", new { /* id=item.PrimaryKey */ }) |*@
+                @Html.ActionLink("Delete", "DeleteA", new { id=item.Id })
             </td>
         </tr>
 }
